--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Google maps API</title>
-<style type="text/css">
-html,body,#map {
-height: 100%;
-}
-</style>
-</head>
-<body>
-<div id="map"></div>
-<script type="text/javascript" src="mapscript.js"></script>
-<script async defer
- src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUvZPjT-O6uWd-2hU8ajXIOnb69ZZ21C8&callback=initMap"></script>
-</body>
-</html>
+Hello GitHub Pages!
