--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ height: 100%;
 }
 </style>
 </head>
-<body onload="initMap()" onunload="GUnload()">
+<body>
     <form>
     <p>
     <input type="button" id="btn" value="開催地表示" onclick="downloadData()" />
