--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@ height: 100%;
 </style>
 </head>
 <body>
-    <form>
-    <p>
-    <input type="button" id="btn" value="開催地表示" onclick="downloadData()" />
-    </p>
-    </form>
+<div id="test"></div>
 <div id="map"></div>
 <script type="text/javascript" src="mapscript.js"></script>
 <script async defer
