--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@ html,body,#map {
 height: 100%;
 }
 </style>
+<script type="text/javascript" src="mapscript.js"></script>
 </head>
 <body>
+<input type="button" value="test" onclick="loadJson()">
 <div id="test"></div>
 <div id="map"></div>
-<script type="text/javascript" src="mapscript.js"></script>
 <script async defer
  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUvZPjT-O6uWd-2hU8ajXIOnb69ZZ21C8&callback=initMap"></script>
 </body>
