--- a/index.html
+++ b/index.html
@@ -9,9 +9,42 @@ height: 100%;
 }
 </style>
 <script type="text/javascript" src="mapscript.js"></script>
+<script type="text/javascript">
+function loadDataFile(fName){
+	httpObj = createXMLHttpRequest(displayData());
+	if (httpObj){
+		httpObj.open("GET",fName,true);
+		httpObj.send(null);
+	}
+}
+
+function displayData(){
+	if ((httpObj.readyState == 4) && (httpObj.status == 200)){
+		$("result").innerHTML = parseJSON(httpObj.responseText);
+	}
+}
+
+// JSONのデータを解析して表示
+function parseJSON(jsData){
+	var data = eval("("+jsData+")");
+	var resultData = "<table border='1'>";
+	for(var i=0; i<data.item.length; i++){
+		var iCode = data.item[i].itemCode; // 商品コード
+		var iName = data.item[i].itemName; // 商品名
+		var iPrice = data.item[i].itemPrice; // 商品価格
+		resultData += "<tr><th>"+iCode+"</th><td>"+iName+"</td><td>"+iPrice+"円</td></tr>";
+	}
+	resultData += "</table>";
+	return resultData;
+}
+</script>
 </head>
 <body>
-<input type="button" value="test" onclick="loadJson()">
+<form name="ajaxForm">
+<input type="button" value="jsondata.txtを読み込み" onClick="loadDataFile('mapscript.js')"><br>
+</form>
+<div id="result"></div>
+<input type="button" value="jsondata.txtを読み込み" onClick="loadDataFile('mapscript.js')"><br>
 <div id="test"></div>
 <div id="map"></div>
 <script async defer
