--- a/sample.html
+++ b/sample.html
@@ -6,18 +6,16 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript" src="http://waox.main.jp/maps/js/util.js"></script> 
-<link rel="stylesheet" href="layout-5-master.css" type="text/css" />
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUvZPjT-O6uWd-2hU8ajXIOnb69ZZ21C8&callback=initMap">
+<script type="text/javascript" src="util.js"></script> 
 <script type="text/javascript"> 
   var infowindow;
   var map;
- 
   function initialize() {
-    var myLatlng = new google.maps.LatLng(35.68407, 139.63623);
     var myOptions = {
       zoom:13,
-      center: myLatlng,
+	center: {lat: 35.170981, lng: 136.881556} ,
       mapTypeId: google.maps.MapTypeId.ROADMAP
     }
     map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
@@ -61,9 +59,7 @@ google_ad_width = 728;
 google_ad_height = 90;
 //-->
 </script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></p>
+</p>
 <div id="navtoplist">
 <ul>
 <li><a href="http://waox.main.jp/news/?page_id=1013" target="_self">Maps V3 ƒgƒbƒv</a></li>
