--- a/sample.html
+++ b/sample.html
@@ -8,8 +8,7 @@
 
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUvZPjT-O6uWd-2hU8ajXIOnb69ZZ21C8&callback=initMap">
-<script type="text/javascript" src="util.js"></script> 
-<script type="text/javascript"> 
+<script type="text/javascript" src="util.js">
   var infowindow;
   var map;
   function initialize() {
