--- a/sample.html
+++ b/sample.html
@@ -48,7 +48,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUvZPjT-O6uWd-2hU8ajXIOnb
 </script> 
 
 </head>
-<body onload="initialize()">
+<body onLoad="initialize()">
 <div id="maincontainer">
 <p align="center"><script type="text/javascript"><!--
 google_ad_client = "ca-pub-6865065121910215";
